GNOME Bugzilla – Bug 750764
gst-rtsp-server: add missing apis to doc
Last modified: 2015-06-11 10:59:01 UTC
Some apis are missing in doc. rtsp-media : gst_rtsp_media_set_latency / gst_rtsp_media_get_latency / gst_rtsp_media_handle_sdp rtsp-media-factory : gst_rtsp_media_factory_set_latency / gst_rtsp_media_factory_get_latency / gst_rtsp_media_factory_get_media_gtype / gst_rtsp_media_factory_set_media_gtype rtsp-stream : gst_rtsp_stream_set_pt_map / gst_rtsp_stream_request_aux_sender / gst_rtsp_stream_set_seqnum_offset / gst_rtsp_stream_get_current_seqnum / gst_rtsp_stream_query_stop / gst_rtsp_stream_query_position
(In reply to Hyunjun from comment #0) > Some apis are missing in doc. rtsp-media : - gst_rtsp_media_set_latency - gst_rtsp_media_get_latency - gst_rtsp_media_handle_sdp rtsp-media-factory : - gst_rtsp_media_factory_set_latency - gst_rtsp_media_factory_get_latency - gst_rtsp_media_factory_get_media_gtype - gst_rtsp_media_factory_set_media_gtype rtsp-stream : - gst_rtsp_stream_set_pt_map - gst_rtsp_stream_request_aux_sender - gst_rtsp_stream_set_seqnum_offset - gst_rtsp_stream_get_current_seqnum - gst_rtsp_stream_query_stop - gst_rtsp_stream_query_position
Created attachment 305049 [details] [review] docs: add missing apis add missing apis
Created attachment 305050 [details] [review] rtsp-stream: add description for gst_rtsp_stream_request_aux_sender That function is pushed in https://bugzilla.gnome.org/show_bug.cgi?id=747839 I missed function descriptions.
Created attachment 305054 [details] [review] docs: add missing types docs: add missing types to gst-rtsp-server.types
Created attachment 305055 [details] [review] rtsp-client: move handle_sdp declaration to vmethod side During this work, I found one minor problem. handle_sdp is vmethod, not signal handler. IMO, it needs to be moved.
Comment on attachment 305055 [details] [review] rtsp-client: move handle_sdp declaration to vmethod side Can't do this, this breaks ABI compatibility.
Thanks for the patches. I've pushed the other ones: commit 2a3dd3d38fe51d4688dd0ac48e20d8d7e60b2630 Author: Hyunjun Ko <zzoon.ko@samsung.com> Date: Thu Jun 11 17:38:52 2015 +0900 rtsp-stream: add description for gst_rtsp_stream_request_aux_sender https://bugzilla.gnome.org/show_bug.cgi?id=750764 commit 93d37df0c3971b24c686a856540171287f6be754 Author: Hyunjun Ko <zzoon.ko@samsung.com> Date: Thu Jun 11 18:10:12 2015 +0900 docs: add missing types https://bugzilla.gnome.org/show_bug.cgi?id=750764 commit 8c1eb6fb4f509ee466d81a0e1f3233262c277403 Author: Hyunjun Ko <zzoon.ko@samsung.com> Date: Thu Jun 11 17:37:25 2015 +0900 docs: add missing apis https://bugzilla.gnome.org/show_bug.cgi?id=750764 (and added a 'Since: 1.6' to the function doc blurb).