rtsp-stream: add description for gst_rtsp_stream_request_aux_sender

https://bugzilla.gnome.org/show_bug.cgi?id=750764